# zigrix

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  eslint.config.mjs  install.sh  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS  pull_request_template.md
dashboard/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
docs/: agent-model.md  architecture.md  cli-analysis-2026-03-13.md  cli-spec.md  concepts.md  config-schema.md  dashboard-prd.md  implementation-bootstrap-node.md  install.md  known-limitations.md  migration-plan-python-to-node.md  node-architecture.md  node-configurable-platform-plan-2026-03-13.md  node-only-completion-note.md  non-goals.md  npm-publish-manual.md  onboarding-ownership-model.md  open-source-readiness-checklist.md  openclaw-integration.md  orchestrator-role-guide.md  oss-distribution-readiness-2026-03-13.md  plan-scorecard-2026-03-13-node-reframe.md  product-decisions.md  prompt-template-model.md  quickstart.md  release-notes-template.md  release-process.md  release-readiness.md  research-scorecard-2026-03-13.md  rule-model.md  runtime-flow.md  state-layout.md  support-matrix.md  ten-out-of-ten-plan-2026-03-13.md  troubleshooting.md  uninstall.md  v1-scope.md  versioning.md
examples/: hello-workflow.json
legacy-python/: README.md  pyproject.toml
legacy-python/src/zigrix/: __main__.py  doctor.py  events.py  paths.py  report.py  worker.py
legacy-python/tests/: test_cli.py
node/: README.md  package-lock.json  package.json
(+154 files in other folders)
