[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zigrix"
version = "0.1.0a0"
description = "OpenClaw agent-oriented development orchestration CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Janos / Zig" }
]
keywords = ["cli", "agents", "openclaw", "orchestration", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/ihurag/zigrix"
Issues = "https://github.com/ihurag/zigrix/issues"

[project.scripts]
zigrix = "zigrix.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zigrix = ["py.typed"]
